<resources>
    <string name="app_name" translatable="false">KotlinTutorial</string>
    <string name="movie" translatable="false">Movie</string>
    <string name="wallet" translatable="false">Wallet</string>
    <string name="my_ticket">My Ticket</string>
    <string name="find_your_best_movie">Find Your Best Movie</string>
    <string name="search_movie">Search movie</string>
    <string name="now_playing">Now Playing</string>
    <string name="comming_soon">Comming soon</string>
    <string name="promo">Promo</string>
    <string name="view_all">View all</string>
</resources>