<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_main_home">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/txt_title_home"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="80dp"
                android:fontFamily="@font/montserrat_semibold"
                android:text="@string/find_your_best_movie"
                android:textColor="@color/white"
                android:textSize="24sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@id/img_user"
                app:layout_constraintTop_toTopOf="parent" />

            <com.makeramen.roundedimageview.RoundedImageView
                android:id="@+id/img_user"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="24dp"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_user_default"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:riv_corner_radius="30dip"
                app:riv_mutate_background="true"
                app:riv_oval="true" />

            <com.example.kotlintutorial.customview.SearchActionBarView
                android:id="@+id/search_view"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="12dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@id/btn_setting"
                app:layout_constraintTop_toBottomOf="@id/txt_title_home" />

            <com.makeramen.roundedimageview.RoundedImageView
                android:id="@+id/btn_setting"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="24dp"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_filter"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txt_title_home"
                app:riv_corner_radius="14dp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rcv_category"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="30dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/search_view" />

            <TextView
                android:id="@+id/txt_popular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="28dp"
                android:fontFamily="@font/montserrat_semibold"
                android:text="@string/now_playing"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/rcv_category" />

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/list_now_playing"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@id/txt_popular" />

            <TextView
                android:id="@+id/txt_comming_soon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="28dp"
                android:fontFamily="@font/montserrat_semibold"
                android:text="@string/comming_soon"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/list_now_playing" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rcv_comming_soon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txt_comming_soon" />

            <TextView
                android:id="@+id/txt_promo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="28dp"
                android:fontFamily="@font/montserrat_semibold"
                android:text="@string/promo"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/rcv_comming_soon" />

            <TextView
                android:id="@+id/txt_view_all_promo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="33dp"
                android:layout_marginEnd="24dp"
                android:fontFamily="@font/montserrat_medium"
                android:text="@string/view_all"
                android:textColor="@color/color_449EFF"
                android:textSize="14sp"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/rcv_comming_soon" />

            <com.makeramen.roundedimageview.RoundedImageView
                android:layout_width="match_parent"
                android:layout_height="84dp"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="16dp"
                android:scaleType="fitXY"
                android:src="@drawable/ic_promo"
                app:layout_constraintTop_toBottomOf="@id/txt_view_all_promo"
                app:riv_corner_radius="20dp" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>